# elves

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  MINIONS-product-plan.md  README.md  RELEASE.md  SECURITY.md  VISION.md  index.html  package-lock.json  package.json  setup.html  tsconfig.json  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  static.yml
landing/: index.html  og-image-generator.html
packaging/homebrew/: elves.rb
src/: App.tsx  index.css  main.tsx  test-setup.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agents/: analyzer.rs  claude_adapter.rs  claude_discovery.rs  codex_adapter.rs  context_builder.rs  interop.rs  memory_extractor.rs  mod.rs  process.rs  runtime.rs
src-tauri/src/commands/: agents.rs  export.rs  filesystem.rs  git.rs  insights.rs  mcp.rs  memory.rs  mod.rs  projects.rs  pty.rs  registry.rs  search.rs  sessions.rs  skills.rs  tasks.rs  templates.rs  updates.rs  workspace.rs
src-tauri/src/db/: elves.rs  events.rs  mcp.rs  memory.rs  minions.rs  mod.rs  projects.rs  schema.rs  sessions.rs  skill_sources.rs  skills.rs  templates.rs
src-tauri/src/project/: config.rs  mod.rs
src-tauri/src/registry/: catalog.rs  fetcher.rs  mod.rs  types.rs
src/hooks/: useAutoInteractive.ts  useCheckForUpdate.ts  useInitialize.ts  useInsights.test.ts  useInsights.ts  useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts  useMcpActions.ts  useMemoryActions.ts  useProjectContext.ts  useResizable.test.ts  useResizable.ts  useSession.ts  useSessionEvents.ts  useSessionHistory.ts  useSkillActions.ts  useSounds.ts  useStallDetection.test.ts  useStallDetection.ts  useTeamSession.ts  useTemplateActions.ts
src/lib/: elf-names.ts  (+21 more)
tasks/: todo.md
(+205 files in other folders)
